# copymanga

./: .gitignore  README.md  TODO.md  appveyor.yml  eslint.config.js  get-commits.ps1  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release.ps1  uvn.ps1  vite.config.js
.cursor/rules/: main.mdc
.github/instructions/: main.instructions.md
.github/workflows/: ci.yml  clean.yml  cleanup-cache.yml  publish.yml  release_notes.yml
.trae/rules/: project_rules.md
backend/: login.py  server.js
docs/: FIXME.md  RELEASE.md  TODO.md  download-feature.md  release.txt
docs/config/: headers.json
scripts/: git-manager.ps1  release-generator.ps1  version-manager.ps1
src/: App.vue  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/assets/config/: .gitkeep  copymanga.json  server.json
src-tauri/capabilities/: default.json
src-tauri/config/: copymanga.json  server.json  ui.json
src-tauri/icons/: icon.icns
src-tauri/src/: cache.rs  config.rs  download.rs  lib.rs  main.rs  main_new.rs  main_old.rs  proxy.rs
src-tauri/src/download/: cartoon.rs  manga.rs  mod.rs  task_manager.rs  types.rs  utils.rs
src/api/: api-source.js  book.js  browse.js  cartoon.js  comment.js  github.js  login.js  manga.js  post.js  system.js  topic.js  user.js
src/components/: BookSearchTab.vue  LazyImg.vue  TitleBar.vue
src/composables/: useMangaCardClick.js  useMangaDetail.js  useMangaNavigation.js  useRouteHistory.js
src/config/: server-config.js  ui-config.js
src/http/: manga.js
src/resources/: fireworks.js
src/router/: go.js  index.js  manga-detail.js  post-router.js
src/stores/: app.js  book-collection.js  book-home.js  book-theme.js  book.js  cartoon-collection.js  cartoon-player.js  cartoon-theme.js  cartoon.js  collection.js  config.js  home.js  index.js  manga-discover.js  manga-ranking.js  manga.js  post-collection.js  post-home.js  post-new.js  post-ranking.js  theme.js  topic.js  user.js
src/utils/: auth.js  auto-update.js  cartoon-download-manager.js  cartoon-downloader.js  cookieHelper.js  crypto.js  date.js  device-generator.js  download-manager.js  export-helper.js  external-link.js  file-converter.js  image.js  number.js  path-helper.js  request.js  restart-helper.js  server-config.js  serverConfig.js  tauri-http-request.js  tauri-request.js  tray.js  ui-config.js  update-checker.js
src/views/: AuthorMangaListView.vue  BookChapterReaderView.vue  BookDetailView.vue  BookDetailView_new.vue  BookHomeView.vue  BookTabView.vue  BookTextReaderView.vue  BookVolumeChaptersView.vue  BookVolumeChaptersView_new.vue  BookshelfView.vue  CartoonDetailView.vue  CartoonHomeView.vue  CartoonPlayerView.vue  ChapterReaderView.vue  DownloadsView.vue  HomeView.vue  LocalCartoonDetailView.vue  LocalMangaDetailView.vue  LoginView.vue  MangaDetailView.vue  MangaDetailView_new.vue  (+13 more)
(+92 files in other folders)
