[package]
name = "copymanga"
version = "0.6.0"
description = "一个拷贝漫画第三方客户端"
authors = ["caolib"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tokio = { version = "1", features = ["full"] }
tower-service = "0.3"
http = "0.2"
reqwest = { version = "0.12", features = ["cookies", "json", "multipart"] }
axum = "0.7"
futures-util = "0.3"
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = "0.4"
tauri-plugin-process = "2"
urlencoding = "2.1"

[[bin]]
name = "tauri-app"
path = "src/main.rs"
required-features = []

[profile.release]


[package.metadata.tauri.windows]
windows_subsystem = "windows"
