[package]
name = "doki"
version = "1.1.0"
description = "doki是一个集漫画、轻小说、动画于一体的桌面应用，提供简洁快速的漫画阅读体验。"
authors = ["caolib"]
edition = "2021"

[lints.rust]
dead_code = "allow"
non_snake_case = "allow"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tower-service = "0.3"
http = "0.2"
reqwest = { version = "0.12", features = [
    "cookies",
    "json",
    "multipart",
    "stream",
] }
axum = "0.7"
futures-util = "0.3"
futures = "0.3"
tauri = { version = "2", features = [
    "protocol-asset",
    "tray-icon",
    "image-png",
] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-window-state = "2"
tauri-plugin-log = "2"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = "0.4"
tauri-plugin-process = "2"
urlencoding = "2.1"
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4"

[[bin]]
name = "doki"
path = "src/main.rs"
required-features = []

[profile.release]


[package.metadata.tauri.windows]
windows_subsystem = "windows"
